fix(heroNotes): github icon alignment

--- a/src/components/index/heroNotes/heroNotes.module.css
+++ b/src/components/index/heroNotes/heroNotes.module.css
@@ -18,6 +18,10 @@
   color: inherit;
   text-decoration: none;
 
+  &.githubLink > svg {
+    transform: translateY(-2px);
+  }
+
   &:first-of-type {
     display: inline;
   }
